--- a/test/src/Makefile.alpine
+++ b/test/src/Makefile.alpine
@@ -1,5 +1,6 @@
 ifneq (,$(wildcard /sbin/apk))
 .PHONY : deps
+## Install all dependencies for alpine
 deps::
 	mkdir -p $(GOBIN)
 	apk add --update go
