--- a/codefresh/test.yml
+++ b/codefresh/test.yml
@@ -23,7 +23,7 @@ steps:
     - cf_export PATH="/usr/local/terraform/0.12/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
     - make init
     - git -C build-harness checkout terraform-docs-hack
-    - make -C test/ clean init
+    - make -C test/ clean init TEST_HARNESS_BRANCH=0.12-support
     - make -C test/src clean init
     - find . -type d -name '.terraform' | xargs rm -rf
     - find . -type f -name 'terraform.tfstate*' -exec rm -f {} \;
