Write a proper makefile with dependencies

--- a/test/src/Makefile.linux
+++ b/test/src/Makefile.linux
@@ -1,8 +1,6 @@
 ifeq ($(shell uname -s),Linux)
-.PHONY : deps
 ## Install all dependencies for linux
-deps::
+$(GOBIN)/dep:
 	mkdir -p $(GOBIN)
 	@curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 endif
-
