--- a/test/src/Makefile
+++ b/test/src/Makefile
@@ -20,26 +20,25 @@ $(BASE):
 	@mkdir -p $(dir $@)
 	@ln -sf $(CURDIR) $@
 
+## Download vendor dependencies to vendor/
+$(BASE)/vendor: $(BASE) $(GOBIN)/dep
+	cd $(BASE) && dep ensure
+
+.PHONY : deps
 ## install OS-specific dependencies. See Makefile.*
 deps::
 	@exit 0
 
 .PHONY : init
 ## Initialize tests
-init: | $(BASE)
-
-.PHONY : ensure
-## Install test dependencies
-ensure:
-	cd $(BASE) && dep ensure
+init: $(BASE)/vendor
 
 .PHONY : test
 ## Run tests
-test: deps ensure
+test: init
 	cd $(BASE) && go test -v -timeout 30m -run TestExamplesComplete
 
+.PHONY : clean
 ## Clean up files
 clean:
 	rm -rf .gopath/ vendor/ $(TF_DATA_DIR)
-
-
