--- a/test/src/Makefile.alpine
+++ b/test/src/Makefile.alpine
@@ -1,7 +1,6 @@
 ifneq (,$(wildcard /sbin/apk))
-.PHONY : deps
 ## Install all dependencies for alpine
-deps::
+$(GOEXE):
 	apk add --update go
 endif
 
