--- a/test/src/Makefile
+++ b/test/src/Makefile
@@ -7,14 +7,24 @@ PATH 	:= $(PATH):$(GOBIN)
 
 export TF_DATA_DIR ?= $(CURDIR)/.terraform
 export TF_CLI_ARGS_init ?= -get-plugins=true
+export GOPATH
 
 .PHONY: all
 ## Default target
 all: test
 
--include Makefile.*
+ifneq (,$(wildcard /sbin/apk))
+## Install go, if not installed
+$(GOEXE):
+	apk add --update go
+endif
 
-export GOPATH
+ifeq ($(shell uname -s),Linux)
+## Install all `dep`, if not installed
+$(GOBIN)/dep:
+	mkdir -p $(GOBIN)
+	@curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+endif
 
 ## Prepare the GOPATH
 $(BASE): $(GOEXE)
@@ -24,11 +34,6 @@ $(BASE): $(GOEXE)
 ## Download vendor dependencies to vendor/
 $(BASE)/vendor: $(BASE) $(GOBIN)/dep
 	cd $(BASE) && dep ensure
-
-.PHONY : deps
-## install OS-specific dependencies. See Makefile.*
-deps::
-	@exit 0
 
 .PHONY : init
 ## Initialize tests
