Dropping null_resource

--- a/README.yaml
+++ b/README.yaml
@@ -509,3 +509,5 @@ contributors:
     github: "SweetOps"
   - name: "Daren Desjardins"
     github: "darend"
+  - name: "Maarten van der Hoef"
+    github: "maartenvanderhoef"
