--- a/README.yaml
+++ b/README.yaml
@@ -481,3 +481,5 @@ contributors:
   github: darend
 - name: Maarten van der Hoef
   github: maartenvanderhoef
+- name: Adam Tibbing
+  github: tibbing
