--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -12,7 +12,7 @@ jobs:
     # Drafts your next Release notes as Pull Requests are merged into "master"
     - uses: release-drafter/release-drafter@v5
       with:
-        publish: true
+        publish: false
         prerelease: false
         config-name: auto-release.yml
       env:
