--- a/.github/workflows/auto-release.yml
+++ b/.github/workflows/auto-release.yml
@@ -6,13 +6,13 @@ on:
     - master
 
 jobs:
-  publish:
+  semver:
     runs-on: ubuntu-latest
     steps:
     # Drafts your next Release notes as Pull Requests are merged into "master"
     - uses: release-drafter/release-drafter@v5
       with:
-        publish: false
+        publish: true
         prerelease: false
         config-name: auto-release.yml
       env:
