--- a/README.yaml
+++ b/README.yaml
@@ -30,7 +30,7 @@ description: |-
   However, it is highly configurable. The delimiter (e.g. `-`) is configurable. Each label item is optional (although you must provide at least one).
   So if you prefer the term `stage` to `environment`
   you can exclude environment and the label `id` will look like `{namespace}-{stage}-{name}-{attributes}`.
-  - If attributes are excluded but `stage` and `environment` are included, `id` will look like `{namespace}-{environment}-{stage}-{name}`.
+  - If attributes are excluded but `namespace`, `stage`, and `environment` are included, `id` will look like `{namespace}-{environment}-{stage}-{name}`.
   - If you want the attributes in a different order, you can specify that, too, with the `label_order` list.
   - You can set a maximum length for the name, and the module will create a unique name that fits within that length.
   - You can control the letter case of the generated labels which make up the `id` using `var.label_value_case`.
