Update README snippets to reflect use of Terraform Registry; add copyrights attribute in README.yaml.

--- a/README.yaml
+++ b/README.yaml
@@ -10,6 +10,10 @@ tags:
 categories:
 - terraform-modules/supported
 license: APACHE2
+copyrights:
+- name: "Cloud Posse, LLC"
+  url: "https://cloudposse.com"
+  year: "2021"
 github_repo: cloudposse/terraform-null-label
 badges:
 - name: Latest Release
@@ -72,7 +76,10 @@ usage: |-
 
   ```hcl
   module "eg_prod_bastion_label" {
-    source     = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     namespace  = "eg"
     stage      = "prod"
     name       = "bastion"
@@ -123,7 +130,10 @@ usage: |-
 
   ```hcl
   module "eg_prod_bastion_abc_label" {
-    source     = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     namespace  = "eg"
     stage      = "prod"
     name       = "bastion"
@@ -154,7 +164,10 @@ usage: |-
   }
 
   module "eg_prod_bastion_xyz_label" {
-    source     = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     namespace  = "eg"
     stage      = "prod"
     name       = "bastion"
@@ -292,7 +305,10 @@ usage: |-
 
   ```hcl
   module "label1" {
-    source      = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     namespace   = "CloudPosse"
     environment = "UAT"
     stage       = "build"
@@ -309,7 +325,10 @@ usage: |-
   }
 
   module "label2" {
-    source    = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     context   = module.label1.context
     name      = "Charlie"
     stage     = "test"
@@ -322,7 +341,10 @@ usage: |-
   }
 
   module "label3" {
-    source    = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     name      = "Starfish"
     stage     = "release"
     context   = module.label1.context
@@ -616,3 +638,5 @@ contributors:
   github: maartenvanderhoef
 - name: Adam Tibbing
   github: tibbing
+- name: Yonatan Koren
+  github: korenyoni
