--- a/README.yaml
+++ b/README.yaml
@@ -72,7 +72,10 @@ usage: |-
 
   ```hcl
   module "eg_prod_bastion_label" {
-    source     = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     namespace  = "eg"
     stage      = "prod"
     name       = "bastion"
@@ -123,7 +126,10 @@ usage: |-
 
   ```hcl
   module "eg_prod_bastion_abc_label" {
-    source     = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     namespace  = "eg"
     stage      = "prod"
     name       = "bastion"
@@ -154,7 +160,10 @@ usage: |-
   }
 
   module "eg_prod_bastion_xyz_label" {
-    source     = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     namespace  = "eg"
     stage      = "prod"
     name       = "bastion"
@@ -292,7 +301,10 @@ usage: |-
 
   ```hcl
   module "label1" {
-    source      = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     namespace   = "CloudPosse"
     environment = "UAT"
     stage       = "build"
@@ -309,7 +321,10 @@ usage: |-
   }
 
   module "label2" {
-    source    = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     context   = module.label1.context
     name      = "Charlie"
     stage     = "test"
@@ -322,7 +337,10 @@ usage: |-
   }
 
   module "label3" {
-    source    = "git::https://github.com/cloudposse/terraform-null-label.git?ref=master"
+    source   = "cloudposse/label/null"
+    # Cloud Posse recommends pinning every module to a specific version
+    # version     = "x.x.x"
+
     name      = "Starfish"
     stage     = "release"
     context   = module.label1.context
@@ -616,3 +634,5 @@ contributors:
   github: maartenvanderhoef
 - name: Adam Tibbing
   github: tibbing
+- name: Yonatan Koren
+  github: korenyoni
