--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,12 +1,3 @@
 {
-  "extends": [
-    "config:base",
-    ":preserveSemverRanges"
-  ],
-  "labels": ["auto-update"],
-  "enabledManagers": ["terraform"],
-  "terraform": {
-    "ignorePaths": ["**/context.tf", "examples/**"]
-  }
+  "enabled": false
 }
-
