--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,3 +1,17 @@
 {
-  "enabled": false
+  "extends": [
+    "config:base",
+    ":preserveSemverRanges"
+  ],
+  "labels": ["auto-update"],
+  "dependencyDashboardAutoclose": true,
+  "enabledManagers": ["terraform"],
+  "terraform": {
+    "ignorePaths": ["**/context.tf", "examples/**"]
+  },
+  "postUpgradeTasks": {
+    "commands": ["make readme"],
+    "fileFilters": ["README.md"],
+    "executionMode": "update"
+  }
 }
