chore: Update Scaffolding

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -1,61 +1,1 @@
-# https://docs.mergify.io/conditions.html
-# https://docs.mergify.io/actions.html
-pull_request_rules:
-- name: "approve automated PRs that have passed checks"
-  conditions:
-  - "base=main"
-  - "-closed"
-  - "head~=^(auto-update|renovate)/.*"
-  - "check-success=terraform-module / ci"
-  - "and: *common_checks"
-  - "sender-permission>=write"
-  actions:
-    review:
-      type: "APPROVE"
-      bot_account: "cloudposse-mergebot"
-      message: "We've automatically approved this PR because the checks from the automated Pull Request have passed."
-
-- name: "merge automated PRs when approved and tests pass"
-  conditions:
-  - "base=main"
-  - "-closed"
-  - "head~=^(auto-update|renovate)/.*"
-  - "check-success=terraform-module / ci"
-  - "and: *common_checks"
-  - "#approved-reviews-by>=1"
-  - "#changes-requested-reviews-by=0"
-  - "#commented-reviews-by=0"
-  - "sender-permission>=write"
-  actions:
-    merge:
-      method: "squash"
-
-- name: "delete the head branch after merge"
-  conditions:
-  - "merged"
-  actions:
-    delete_head_branch: {}
-
-- name: "ask to resolve conflict"
-  conditions:
-  - "conflict"
-  - "-closed"
-  actions:
-    comment:
-      message: "This pull request has conflicts, please resolve."
-
-- name: "remove outdated reviews"
-  conditions:
-  - "base=main"
-  actions:
-    dismiss_reviews:
-      changes_requested: true
-      approved: true
-      message: "This Pull Request has been updated, so we're dismissing all reviews."
-
-- name: "close PRs with no files changed"
-  conditions:
-    - "#files=0"
-  actions:
-    close:
-      message: "This pull request has been automatically closed by Mergify because there are no longer any changes."
+extends: .github
