--- a/.github/workflows/scheduled.yml
+++ b/.github/workflows/scheduled.yml
@@ -1,7 +1,7 @@
 ---
 name: scheduled
 on:
-  workflow_dispatch: {}  # Allows manually trigger this workflow
+  workflow_dispatch: { }  # Allows manually trigger this workflow
   schedule:
     - cron: "0 3 * * *"
 
@@ -13,5 +13,4 @@ permissions:
 jobs:
   scheduled:
     uses: cloudposse/github-actions-workflows-terraform-module/.github/workflows/scheduled.yml@main
-    secrets:
-      github_access_token: ${{ secrets.REPO_ACCESS_TOKEN }}
+    secrets: inherit
